# TRexRun

./: CMakeLists.txt  README.md
src/: cactus.cpp  cactus.h  controller.cpp  controller.h  game.cpp  game.h  imageobject.cpp  imageobject.h  main.cpp  renderer.cpp  renderer.h  trex.cpp  trex.h
